pom dependency cleanup, add exec:exec goal, add assemble profile for shaded jar, eliminate sys outs in tests