@@ -12,24 +12,6 @@
 		<version>7</version>
 	</parent>
 
-	<profiles>
-		<profile>
-			<id>artifactory</id>
-			<distributionManagement>
-				<snapshotRepository>
-					<id>netflix-artifactory-snapshots</id>
-					<name>Netflix Artifactory Snapshots</name>
-					<url>http://artifacts/libs-snapshots-local</url>
-				</snapshotRepository>
-				<repository>
-					<id>netflix-artifactory-releases</id>
-					<name>Netflix Artifactory Releases</name>
-					<url>http://artifacts/libs-releases-local</url>
-				</repository>
-			</distributionManagement>
-		</profile>
-	</profiles>
-
 	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
@@ -46,9 +28,17 @@
 
     <properties>
         <dropwizard.version>0.4.0</dropwizard.version>
+        <exec.Xms>256m</exec.Xms>
+        <exec.Xmx>512m</exec.Xmx>
+        <exec.MaxPermSize>256m</exec.MaxPermSize>
     </properties>
 
 	<dependencies>
+        <dependency>
+            <groupId>com.yammer.dropwizard</groupId>
+            <artifactId>dropwizard-core</artifactId>
+            <version>${dropwizard.version}</version>
+        </dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
@@ -80,43 +70,34 @@
 			<version>3.1</version>
 		</dependency>
 		<dependency>
-			<groupId>com.sun.jersey.contribs</groupId>
-			<artifactId>jersey-multipart</artifactId>
-			<version>1.1.4.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-json</artifactId>
-			<version>1.9.1</version>
-		</dependency>
+            <groupId>org.codehaus.jettison</groupId>
+            <artifactId>jettison</artifactId>
+            <version>1.3.1</version>
+        </dependency>
 		<dependency>
 			<groupId>com.amazonaws</groupId>
 			<artifactId>aws-java-sdk</artifactId>
 			<version>1.3.14</version>
+            <exclusions>
+                <!-- Updated versions of these jackson libs come from dropwizard-core -->
+                <exclusion>
+                    <groupId>org.codehaus.jackson</groupId>
+                    <artifactId>jackson-core-asl</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.codehaus.jackson</groupId>
+                    <artifactId>jackson-mapper-asl</artifactId>
+                </exclusion>
+            </exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>r05</version>
+			<version>12.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.inject</groupId>
 			<artifactId>guice</artifactId>
-			<version>3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-bundle</artifactId>
-			<version>1.9.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.jersey.contribs</groupId>
-			<artifactId>jersey-guice</artifactId>
-			<version>1.9.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.inject.extensions</groupId>
-			<artifactId>guice-servlet</artifactId>
 			<version>3.0</version>
 		</dependency>
 		<dependency>
@@ -135,29 +116,14 @@
 			<version>1.0.3.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.yaml</groupId>
-			<artifactId>snakeyaml</artifactId>
-			<version>1.9</version>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.cassandra</groupId>
 			<artifactId>cassandra-all</artifactId>
 			<version>1.1.2</version>
 		</dependency>
 		<dependency>
-			<groupId>javax.ws.rs</groupId>
-			<artifactId>jsr311-api</artifactId>
-			<version>1.1.1</version>
-		</dependency>
-		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-configuration</groupId>
@@ -184,12 +150,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.5.8</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.5.8</version>
+			<version>1.6.4</version>
 		</dependency>
 		<dependency>
 			<groupId>net.java.dev.jna</groupId>
@@ -206,15 +167,30 @@
 			<artifactId>compress-lzf</artifactId>
 			<version>0.9.2</version>
 		</dependency>
-        <dependency>
-            <groupId>com.yammer.dropwizard</groupId>
-            <artifactId>dropwizard-core</artifactId>
-            <version>${dropwizard.version}</version>
-        </dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.1</version>
+                <configuration>
+                    <executable>java</executable>
+                    <arguments>
+                        <argument>-Xdebug</argument>
+                        <argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005</argument>
+                        <argument>-Xms${exec.Xms}</argument>
+                        <argument>-Xmx${exec.Xmx}</argument>
+                        <argument>-XX:MaxPermSize=${exec.MaxPermSize}</argument>
+                        <argument>-classpath</argument>
+                        <classpath />
+                        <argument>com.netflix.priam.dropwizard.PriamService</argument>
+                        <argument>server</argument>
+                        <argument>src/main/resources/conf/priam.yaml</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
@@ -271,7 +247,7 @@
 						-Xms256m -Xmx1024m -XX:MaxPermSize=512m
 						-javaagent:"${settings.localRepository}"/com/googlecode/jmockit/jmockit/0.999.12/jmockit-0.999.12.jar
 					</argLine>
-					<skipTests>false</skipTests>
+					<skipTests>${skipTests}</skipTests>
 				</configuration>
 			</plugin>
 
@@ -297,4 +273,65 @@
 			</plugin>
 		</plugins>
 	</build>
+
+    <profiles>
+        <profile>
+            <id>artifactory</id>
+            <distributionManagement>
+                <snapshotRepository>
+                    <id>netflix-artifactory-snapshots</id>
+                    <name>Netflix Artifactory Snapshots</name>
+                    <url>http://artifacts/libs-snapshots-local</url>
+                </snapshotRepository>
+                <repository>
+                    <id>netflix-artifactory-releases</id>
+                    <name>Netflix Artifactory Releases</name>
+                    <url>http://artifacts/libs-releases-local</url>
+                </repository>
+            </distributionManagement>
+        </profile>
+        <profile>
+            <id>assemble</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-shade-plugin</artifactId>
+                        <version>1.4</version>
+                        <configuration>
+                            <createDependencyReducedPom>true</createDependencyReducedPom>
+                            <filters>
+                                <filter>
+                                    <artifact>*:*</artifact>
+                                    <excludes>
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>shade</goal>
+                                </goals>
+                                <configuration>
+                                    <transformers>
+                                        <!-- collate the various META-INF/services entries in the JARs instead of overwriting them -->
+                                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                            <mainClass>com.netflix.priam.dropwizard.PriamService</mainClass>
+                                        </transformer>
+                                    </transformers>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 </project>
